2014-10-20  Ola Jeppsson  <ola@adapteva.com>
	* apps/dotproduct/run.sh:
	* apps/e-bandwidth-test/test.sh:
	* apps/e-dump-mem/test.sh:
	* apps/e-dump-regs/test.sh:
	* apps/e-fill-mem/test.sh:
	* apps/e-init/test.sh:
	* apps/e-mem-sync/test.sh:
	* apps/eprime/run.sh:
	* apps/erm/run.sh:
	* apps/erm_example/run.sh:
	* apps/fft2d/run.sh:
	* apps/fft2d/test.sh:
	* apps/hello-world/run.sh:
	* apps/matmul-16/run.sh:
	* apps/matmul-16/test.sh:
	* apps/matmul-64/run.sh:
	* apps/shm_test/run.sh:
	* apps/shm_test/test.sh:
	* archive/e-test/e-test:
	* cpu/arithmode/run.sh:
	* cpu/arithmode/test.sh:
	* cpu/assembly/run.sh:
	* cpu/basic_math/run.sh:
	* cpu/complex_numbers/run.sh:
	* cpu/ctimer/run.sh:
	* cpu/interrupt-demo/run.sh:
	* cpu/interrupts/run.sh:
	* cpu/mutex/run.sh:
	* cpu/nested_interrupts/run.sh:
	* cpu/register_test/run.sh:
	* cpu/remote_call/run.sh:
	* dma/dma_2d/run.sh:
	* dma/dma_2d/test.sh:
	* dma/dma_chain/run.sh:
	* dma/dma_chain/test.sh:
	* dma/dma_interrupt/run.sh:
	* dma/dma_interrupt/test.sh:
	* dma/dma_message_read/run.sh:
	* dma/dma_message_read/test.sh:
	* dma/dma_message_write/run.sh:
	* dma/dma_message_write/test.sh:
	* dma/dma_slave/run.sh:
	* dma/dma_slave/test.sh:
	* emesh/emesh_bandwidth_all2one/run.sh:
	* emesh/emesh_bandwidth_all2one/test.sh:
	* emesh/emesh_bandwidth_bisection/run.sh:
	* emesh/emesh_bandwidth_neighbour/run.sh:
	* emesh/emesh_read_latency/run.sh:
	* emesh/emesh_traffic/run.sh:
	* io/link_lowpower_mode/run.sh:
	* labs/clockgating_mode/run.sh:
	* labs/hardware_barrier/run.sh:
	* labs/hardware_loops/run.sh:
	* labs/mem_protect/run.sh:
	* test/e-loopback-test/test.sh:
	* test/e-main/run.sh:
	* test/e-main/test.sh:
	* test/e-matmul-test/test.sh:
	* test/e-mem-test/test.sh:
	* test/e-read-buf/test.sh:
	* test/e-read-word/test.sh:
	* test/e-regfile-test/test.sh:
	* test/e-reset/test.sh:
	* test/e-standby-test/test.sh:
	* test/e-test/e-test:
	* test/e-test/test.sh:
	* test/e-write-buf/test.sh:
	* test/e-write-word/test.sh: